# incredibot

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  incredibot.cabal  incredibot.nimble  stack.yaml
app/: Main.hs
src/: incredibot.nim  main.rs
