cabal-version:      2.4
name:               incredibot
version:            0.1.0.0

author:             FeistyKit
maintainer:         eeveebeevee33@gmail.com

extra-source-files:
    CHANGELOG.md
    README.md

executable incredibot
    main-is:          Main.hs

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded -dynamic
    build-depends:    base ^>=4.15.0.0
                    , text
                    , unliftio
                    , discord-haskell
                    , regex-pcre
